--- a/templates/calculate.html
+++ b/templates/calculate.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://fonts.googleapis.com/css2?family=Poppins" rel="stylesheet">
-
+        <link rel="icon" href="{{ url_for('static', filename='css/Assets/LOGO.png') }}">
         <title>BMI Calculator</title>
         <link rel="stylesheet" href="{{ url_for('static', filename = 'css/calc.css') }}">
 
