ngebenerin get meal plan

--- a/templates/daily_meals.html
+++ b/templates/daily_meals.html
@@ -47,16 +47,16 @@
             <label for="diet">DIET</label>
             <select id="dietlist" name="diet" required>
                 <option value = ""> Select Diet</option>
-                <option value = "gluten_free"> Gluten Free</option>
-                <option value = "ketogenic"> Ketogenic</option>
-                <option value = "vegetarian"> Vegetarian</option>
-                <option value = "lacto_vegetarian"> Lacto-Vegetarian</option>
-                <option value = "ovo-vegetarian"> Ovo-Vegetarian</option>
-                <option value = "vegan"> Vegan</option>
-                <option value = "pescetarian"> Pescetarian</option>
-                <option value = "paleo"> Paleo</option>
+                <option value = "Gluten free"> Gluten Free</option>
+                <option value = "Ketogenic"> Ketogenic</option>
+                <option value = "Vegetarian"> Vegetarian</option>
+                <option value = "Lacto-vegetarian"> Lacto-Vegetarian</option>
+                <option value = "Ovo-vegetarian"> Ovo-Vegetarian</option>
+                <option value = "Vegan"> Vegan</option>
+                <option value = "Pescetarian"> Pescetarian</option>
+                <option value = "Paleo"> Paleo</option>
                 <option value = "Primal"> Primal</option>
-                <option value = "Low_FODMAP"> Low FODMAP</option>
+                <option value = "Low FODMAP"> Low FODMAP</option>
                 <option value = "Whole30"> Whole30</option>
                 <option value = ""> None</option>
             </select>
