--- a/templates/get_meal_plan.html
+++ b/templates/get_meal_plan.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Ini get meal</h1>
+    {% for data in datas %}
+        <p>{{data[meals]}}</p>
+    {% endfor %}
+
 </body>
 </html>
