--- a/templates/calculate.html
+++ b/templates/calculate.html
@@ -7,7 +7,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Poppins" rel="stylesheet">
         <link rel="icon" href="{{ url_for('static', filename='css/Assets/LOGO.png') }}">
         <title>BMI Calculator</title>
-        <link rel="stylesheet" href="{{ url_for('static', filename = 'css/calc.css') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename = 'css/style.css') }}">
 
         </head>
         <body>
@@ -15,14 +15,28 @@
                 <h1>BMI CALCULATOR</h1>
                 
                 <form class="calculator">
+                
+                    <div>
+                        <label for="height">HEIGHT (cm)</label>
+                        <input type="number" id="height" min="0" step = "0.01" value="0" name="input_tinggi"/>
+                    </div>
                     <div>
                         <label for="weight">WEIGHT (kg)</label>
                         <input type="number" id="weight" min="0" step = "0.01" value="0" name="input_berat"/>
                     </div>
-
-                    <div>
-                        <label for="height">HEIGHT (cm)</label>
-                        <input type="number" id="height" min="0" step = "0.01" value="0" name="input_tinggi"/>
+    
+                    <div class="activity-container">
+                        <label for="activity">ACTIVITY</label>
+                        <select id="activityList" name="activity" required>
+                            <option value = ""> Select Activity</option>
+                            <option value = "BMR" name = "BMR"> Basal Metabolic Rate (BMR)</option>
+                            <option value = "sedentary" name = "sedentary"> Sedentary: little or no exercise</option>
+                            <option value = "lightly_active" name = "lightly_active"> Light: exercise 1-3 times/week</option>
+                            <option value = "moderate" name = "moderately_active"> Moderate: exercise 4-5 times/week</option>
+                            <option value = "active" name = "active"> Active: daily exercise or intense exercise 3-4 times/week</option>
+                            <option value = "very" name = "very_active"> Very Active: intense exercise 6-7 times/week</option>
+                            <option value = "extra" name = "super_active"> Extra Active: very intense exercise daily, or physical job</option>
+                        </select>
                     </div>
                     
                     <div>
