--- a/templates/home.html
+++ b/templates/home.html
@@ -8,9 +8,12 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/home.css') }}">
     <link rel="icon" href="{{ url_for('static', filename='css/Assets/LOGO.png') }}">
     <title>LifeWell</title>
+    <style>
+
+    </style>
 </head>
 <body>
-    <div class="container">
+    <div class="container" style="display: none;">
         <div class="header">
             <div class="sambutan">
                 <h1>Hello, Huank</h1>
@@ -59,9 +62,21 @@
             </div>
         </div>
     </div>
-
-
     
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
+<script>
+    $(document).ready(function(){
+        if (document.referrer === '') {
+            window.location.href = `{{ url_for('loading') }}`
+        }else{
+            $('.container').css("display", "block")
+        }
+    })
+</script>
 </body>
+
+
 
 </html>
