--- a/templates/calculate.html
+++ b/templates/calculate.html
@@ -14,7 +14,7 @@
             <div class="container">
                 <h1>BMI CALCULATOR</h1>
                 
-                <form class="calculator">
+                <form class="calculator", method="POST">
                 
                     <div>
                         <label for="height">HEIGHT (cm)</label>
@@ -32,10 +32,10 @@
                             <option value = "BMR" name = "BMR"> Basal Metabolic Rate (BMR)</option>
                             <option value = "sedentary" name = "sedentary"> Sedentary: little or no exercise</option>
                             <option value = "lightly_active" name = "lightly_active"> Light: exercise 1-3 times/week</option>
-                            <option value = "moderate" name = "moderately_active"> Moderate: exercise 4-5 times/week</option>
+                            <option value = "moderately_active" name = "moderately_active"> Moderate: exercise 4-5 times/week</option>
                             <option value = "active" name = "active"> Active: daily exercise or intense exercise 3-4 times/week</option>
-                            <option value = "very" name = "very_active"> Very Active: intense exercise 6-7 times/week</option>
-                            <option value = "extra" name = "super_active"> Extra Active: very intense exercise daily, or physical job</option>
+                            <option value = "very_active" name = "very_active"> Very Active: intense exercise 6-7 times/week</option>
+                            <option value = "super_active" name = "super_active"> Extra Active: very intense exercise daily, or physical job</option>
                         </select>
                     </div>
                     
@@ -59,8 +59,8 @@
                     <div class="gauge__fill3"></div>
                     <div class="gauge__fill4"></div>
                     <div class="gauge__cover">
-                        <p id ="bmi" name="hasil_bmi">0</p>
-                        <p id="desc">N/A</p>
+                        <p id ="bmi" name="hasil_bmi">{{ bmi }}</p>
+                        <p id="desc">{{desc}}</p>
                     </div>
                 </div>
 
