--- a/templates/home.html
+++ b/templates/home.html
@@ -48,9 +48,11 @@
             </div>
             <div class="column">
                 <div class="button">
-                    <div class="iconworkout">
-                        <img src="{{ url_for('static', filename='css/Assets/Workout.png') }}" alt="">
-                    </div>
+                    <a href="{{ url_for('workout') }}">
+                        <div class="iconworkout">
+                            <img src="{{ url_for('static', filename='css/Assets/Workout.png') }}" alt="">
+                        </div>
+                    </a>
                     <p><b>Workout</b></p>
                 </div>
 
