tambah page setelah submit

--- a/templates/muscle.html
+++ b/templates/muscle.html
@@ -56,7 +56,7 @@
         </div>
 
         <div class="button">
-            <a href="{{ url_for('summary') }}">
+            <a href="{{ url_for('womoves') }}">
                 <button id="nextpage">Next</button>
             </a>
         </div>
