--- a/static/css/womoves.css
+++ b/static/css/womoves.css
@@ -2,6 +2,8 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    background: linear-gradient(90deg, rgba(3,141,116,1) 0%, rgba(9,80,144,1) 100%);
+    font-family: 'Poppins', sans-serif;
 }
 
 .image-grid {
