--- a/templates/muscle.html
+++ b/templates/muscle.html
@@ -18,7 +18,7 @@
 
                 <div class="muscle-container">
                     <label for="muscle">MUSCLE</label>
-                    <select id="muscleList" name="muscle" required>
+                    <select id="muscleList" name="muscleList" required>
                         <option value = ""> Select muscle</option>
                         <option value = "cardio" name = "cardio"> cardio </option>
                         <option value = "neck" name = "neck"> neck </option>
@@ -34,9 +34,14 @@
                 </div>
 
 
-                <div>
-                    <label for="repetition">REPETISI</label>
-                    <input type="number" id="repetition" min="0" max="12" step = "1" value="0" name="input_waktu"/>
+                <div class="muscle-container">
+                    <label for="intensity">LEVEL</label>
+                    <select id="intensitylevel" name="intensity" required>
+                        <option value = ""> select intensity</option>
+                        <option value = "Light" name = "Light"> Light </option>
+                        <option value = "Moderate" name = "Moderate"> Moderate </option>
+                        <option value = "Heavy" name = "Heavy"> Heavy </option>
+                    </select>
                 </div>
 
 
@@ -61,6 +66,6 @@
             </a>
         </div>
 
-        <script src = "{{ url_for('static', filename='js/script.js') }}" defer></script>
+        <script src = "{{ url_for('static', filename='js/muscles.js') }}" defer></script>
     </body>
 </html>
