--- a/templates/womoves.html
+++ b/templates/womoves.html
@@ -2,9 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins" rel="stylesheet">
+    <link rel="icon" href="{{ url_for('static', filename='css/Assets/LOGO.png') }}">
+    <title>WORKOUT</title>
     <link rel="stylesheet" href="{{url_for('static', filename='css/womoves.css')}}">
-    <title>Image Grid</title>
 </head>
 <body>
     <div class="image-grid">
