--- a/static/css/womoves.css
+++ b/static/css/womoves.css
@@ -6,13 +6,33 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 
+p{
+    font-size: 80%;
+}
+
 .image-grid {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr); /* 4 columns in the grid */
-    grid-gap: 20px; /* Gap between images */
-    max-width: 800px; /* Adjust as needed */
+    /* display: flex; */
+    /* grid-template-columns: repeat(4, 1fr); 4 columns in the grid */
+    /* grid-gap: 20px; Gap between images */
+    max-width: 80%; /* Adjust as needed */
     margin: 20px auto; /* Center the grid */
 }
+
+.grid-container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    padding: 10px;
+  }
+  
+.grid-item {
+size: 50%;
+background-color: rgba(255, 255, 255, 0.8);
+border: 1px solid rgba(0, 0, 0, 0.8);
+padding: 20px;
+font-size: 30px;
+text-align: center;
+}
+
 
 .image {
     text-align: center;
