ini  baru, bruteforce dikit

--- a/templates/muscle.html
+++ b/templates/muscle.html
@@ -36,9 +36,8 @@
 
                 <div class="muscle-container">
                     <label for="intensity">LEVEL</label>
-                    <select id="intensitylevel" name="intensity" required>
+                    <select id="intensitylevel" name="intensitylevel" required>
                         <option value = ""> select intensity</option>
-                        <option value = "Light" name = "Light"> Light </option>
                         <option value = "Moderate" name = "Moderate"> Moderate </option>
                         <option value = "Heavy" name = "Heavy"> Heavy </option>
                     </select>
