app py nya gw ubah di bagian route workout

--- a/templates/muscle.html
+++ b/templates/muscle.html
@@ -14,7 +14,7 @@
         <div class="container">
             <h1>CHOOSE MUSCLE</h1>
             
-            <form class="muscle">
+            <form class="muscle" method="POST">
 
                 <div class="muscle-container">
                     <label for="muscle">MUSCLE</label>
@@ -46,8 +46,10 @@
 
 
 
-                <div>
+                <div class = "button-ihiy">
                     <button type="reset">Reset</button>
+                    <a>
+                    
                     <button type="submit">Submit</button>
                 </div>
 
