--- a/templates/home.html
+++ b/templates/home.html
@@ -13,7 +13,7 @@
     </style>
 </head>
 <body>
-    <div class="container" style="display: none;">
+    <div class="container">
         <div class="header">
             <div class="sambutan">
                 <h1>Hello, Huank</h1>
@@ -66,17 +66,9 @@
     </div>
     
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
-<script>
-    $(document).ready(function(){
-        if (document.referrer === '') {
-            window.location.href = `{{ url_for('loading') }}`
-        }else{
-            $('.container').css("display", "block")
-        }
-    })
-</script>
+
+
 </body>
 
 
