ini udah jadi yg bagian pilih bodypart

--- a/templates/womoves.html
+++ b/templates/womoves.html
@@ -24,7 +24,11 @@
         {% endfor %}
     </div>
 
-    
+    <div class="button">
+        <a href="{{ url_for('muscle') }}">
+            <button id="prevpage">BACK</button>
+        </a>
+    </div>
     
 </body>
 </html>
