--- a/static/css/womoves.css
+++ b/static/css/womoves.css
@@ -1,4 +1,5 @@
 body {
+    place-items: center;
     /* font-family: Arial, sans-serif; */
     margin: 0;
     padding: 0;
@@ -37,7 +38,31 @@ p{
     border-radius: 10%;
 }
 
-/* .image img {
-    max-width: 100%;
-    height: auto;
-} */
+.button{
+    height: 40px + 5vh;
+    position: center;
+    justify-content: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.button:hover {
+    filter: brightness(120%);
+}
+
+#prevpage{
+    
+    border-radius: 10px;
+    width: 80px;
+    height: 40px;
+    font-size: 20px;
+    background-color: white;
+    border-width: 0;
+    cursor: pointer;
+}
+
+#prevpage:hover{
+    box-shadow: 0px 0px 5px 4px rgba(0, 0, 0, 0.25);
+    transition: 200ms;
+}
