--- a/templates/muscle.html
+++ b/templates/muscle.html
@@ -29,7 +29,7 @@
                         <option value = "lower_arms" name = "lower_arms"> lower arms </option>
                         <option value = "lower_legs" name = "lower_legs"> lower legs </option>
                         <option value = "upper_arms" name = "upper_arms"> upper arms </option>
-                        <option value = "upper_legs" name = "upper_legs"> upper arms </option>
+                        <option value = "upper_legs" name = "upper_legs"> upper legs </option>
                     </select>
                 </div>
 
