--- a/templates/home.html
+++ b/templates/home.html
@@ -16,7 +16,10 @@
     <div class="container">
         <div class="header">
             <div class="sambutan">
-                <h1>Hello, Huank</h1>
+                <h1>Hello, 
+                    <span>Huank</span>
+
+                    </h1>
 
                 <h3>Don’t forget to drink water 💦</h3>
             </div>
@@ -48,7 +51,7 @@
             </div>
             <div class="column">
                 <div class="button">
-                    <a href="{{ url_for('workout') }}">
+                    <a href="{{ url_for('muscle') }}">
                         <div class="iconworkout">
                             <img src="{{ url_for('static', filename='css/Assets/Workout.png') }}" alt="">
                         </div>
