--- a/templates/muscle.html
+++ b/templates/muscle.html
@@ -53,8 +53,15 @@
 
             </form>
 
+            
+            
         </div>
-
+        
+        <div class="button">
+            <a href="{{ url_for('home') }}">
+                <button id="prevpage">BACK</button>
+            </a>
+        </div>
 
         <script src = "{{ url_for('static', filename='js/muscles.js') }}" defer></script>
     </body>
