--- a/static/css/muscle.css
+++ b/static/css/muscle.css
@@ -95,11 +95,21 @@ h1 {
     background: #444;
 }
 
+.button{
+    height: 40px + 5vh;
+    position: center;
+    justify-content: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .button:hover {
     filter: brightness(120%);
 }
 
-#nextpage{
+#prevpage{
+    
     border-radius: 10px;
     width: 80px;
     height: 40px;
@@ -109,7 +119,7 @@ h1 {
     cursor: pointer;
 }
 
-#nextpage:hover{
+#prevpage:hover{
     box-shadow: 0px 0px 5px 4px rgba(0, 0, 0, 0.25);
     transition: 200ms;
 }
