Nambahin NLP, belom jalan tapi

--- a/templates/home.html
+++ b/templates/home.html
@@ -48,7 +48,7 @@
             </div>
             <div class="column">
                 <div class="button">
-                    <a href="{{ url_for('workout') }}">
+                    <a href="{{ url_for('muscle') }}">
                         <div class="iconworkout">
                             <img src="{{ url_for('static', filename='css/Assets/Workout.png') }}" alt="">
                         </div>
