--- a/templates/meals.html
+++ b/templates/meals.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meals</title>
+    <link rel="icon" href="{{ url_for('static', filename='css/Assets/LOGO.png') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/displayMeals.css') }}
     ">
 </head>
