--- a/templates/womoves.html
+++ b/templates/womoves.html
@@ -16,7 +16,7 @@
     <div class="grid-container">
         {% for name in data %}
         <div class="grid-item">
-                <img class="gambar" src="{{ name['gifUrl'] }}" alt ="aa">    
+                <img class="gambar" src="{{ name['gifUrl'] }}" alt ="womoves">    
                 <p>Name : {{ name['name'] }}</p>
                 <p>Equipment : {{ name['equipment'] }}</p>
                 <p>Target : {{ name['target'] }}</p>    
@@ -24,7 +24,11 @@
         {% endfor %}
     </div>
 
-    
+    <div class="button">
+        <a href="{{ url_for('muscle') }}">
+            <button id="prevpage">BACK</button>
+        </a>
+    </div>
     
 </body>
 </html>
