ini nama udh bisa berubah, trus css calculate, dll

--- a/templates/login.html
+++ b/templates/login.html
@@ -28,7 +28,7 @@
     <label for="gender">Gender (Male / Female)</label>
     <div class="radio-container">
       <div class ="kotakan">
-        <input type="radio" name="gender" id="male" value="male"/>
+        <input type="radio" name="gender" id="male" value="male" required="required"/>
         <label for="male">Male</label>
       </div>
         
