--- a/templates/summary.html
+++ b/templates/summary.html
@@ -55,7 +55,7 @@
                     
                     <div class="textbox">
                         <h2 id="ganti" name="gantiVitamin">2 L</h2>
-                        <p id="judulnya"> Vitamin </p>
+                        <p id="judulnya"> Calories </p>
                     </div>
                 </div>
 
