--- a/templates/summary.html
+++ b/templates/summary.html
@@ -54,7 +54,7 @@
                     <img src="{{ url_for('static', filename='css/Assets/vitamin.png') }}" alt="" id="iconneeded">
                     
                     <div class="textbox">
-                        <h2 id="ganti" name="gantiVitamin">2 L</h2>
+                        <h2 id="ganti" name="gantiVitamin">{{calories}}</h2>
                         <p id="judulnya"> Calories </p>
                     </div>
                 </div>
