--- a/templates/summary.html
+++ b/templates/summary.html
@@ -51,7 +51,7 @@
 
             <div class="column">
                 <div class="needed" id="box4">
-                    <img src="{{ url_for('static', filename='css/Assets/vitamin.png') }}" alt="" id="iconneeded">
+                    <img src="{{ url_for('static', filename='css/Assets/calories(tambahan).png') }}" alt="" id="iconneeded">
                     
                     <div class="textbox">
                         <h2 id="ganti" name="gantiVitamin">{{calories}}</h2>
