--- a/templates/login.html
+++ b/templates/login.html
@@ -22,7 +22,7 @@
     <br>
 
     <label for="age">Age</label>
-    <input type="number" id="age" name="age" required>
+    <input type="number" id="age" name="age" min="0" step="1" required>
     <br>
 
     <label for="gender">Gender (Male / Female)</label>
