--- a/templates/summary.html
+++ b/templates/summary.html
@@ -32,7 +32,7 @@
                     <img src="{{ url_for('static', filename='css/Assets/Carbs.png') }}" alt="" id="iconneeded">
                     
                     <div class="textbox">
-                        <h2 id="ganti" name="gantiCarbs">300 Gram</h2>
+                        <h2 id="ganti" name="gantiCarbs">{{karbo}} gr</h2>
                         <p id="judulnya"> Carbs </p>
                     </div>
                 </div>
@@ -62,7 +62,7 @@
                     <img src="{{ url_for('static', filename='css/Assets/fat.png') }}" alt="" id="iconneeded">
                     
                     <div class="textbox">
-                        <h2 id="ganti" name="gantiFat">67 gr</h2>
+                        <h2 id="ganti" name="gantiFat">{{fat}} gr</h2>
                         <p id="judulnya"> Fat </p>
                     </div>
                 </div>
