--- a/templates/summary.html
+++ b/templates/summary.html
@@ -84,7 +84,7 @@
     </div>
 
     <div class="button">
-        <a href="{{ url_for('daily_meals') }}">
+        <a href="{{ url_for('get_meal') }}">
         <button id="nextpage">Next</button>
         </a>
     </div>
