--- a/templates/home.html
+++ b/templates/home.html
@@ -29,7 +29,7 @@
     <div class="container">
         <div class="header">
             <div class="sambutan">
-                <h1>Hello, Huank</h1>
+                <h1>Hello, {{ name }}</h1>
 
                 <h3>Don’t forget to drink water 💦</h3>
             </div>
